# BatteryMonitor

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md
.github/workflows/: cmake-single-platform.yml
src/: battery_monitor.cpp  battery_monitor.h  battery_reader.cpp  battery_reader.h  main.cpp  netlink_listener.cpp  netlink_listener.h  notification.cpp  notification.h
systemd/: battery-monitor.service
tests/: battery_reader_test.cpp
